RESOLVED FIXED228815
Fix warning in HTTPParsers.parseStructuredFieldValue
https://bugs.webkit.org/show_bug.cgi?id=228815
Summary Fix warning in HTTPParsers.parseStructuredFieldValue
Rob Buis
Reported 2021-08-05 01:19:26 PDT
In file included from WebCore/DerivedSources/unified-sources/UnifiedSource-3c72abbe-50.cpp:8: ../../Source/WebCore/platform/network/HTTPParsers.cpp: In function ‘std::optional<std::pair<WTF::StringView, WTF::HashMap<WTF::String, WTF::String> > > WebCore::parseStructuredFieldValue(WTF::StringView)’: ../../Source/WebCore/platform/network/HTTPParsers.cpp:651:47: warning: comparison is always true due to limited range of data type [-Wtype-limits] 651 | } else if ((header[index] >= 0x00 && header[index] <= 0x1F) || (header[index] >= 0x7F && header[index] <= 0xFF)) // Not in VCHAR or SP. | ~~~~~~~~~~~~~~^~~~~~~
Attachments
Patch (1.75 KB, patch)
2021-08-05 01:22 PDT, Rob Buis
no flags
Rob Buis
Comment 1 2021-08-05 01:22:43 PDT
EWS
Comment 2 2021-08-05 08:02:45 PDT
Committed r280686 (240288@main): <https://commits.webkit.org/240288@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 434972 [details].
Radar WebKit Bug Importer
Comment 3 2021-08-05 08:03:16 PDT
Note You need to log in before you can comment on or make changes to this bug.