Fix warning in HTTPParsers.parseStructuredFieldValue https://bugs.webkit.org/show_bug.cgi?id=228815

Patch by Rob Buis <rbuis@igalia.com> on 2021-08-05
Reviewed by Sam Weinig.

UChar is unsigned, so it is not needed to check that it is
zewro or greater.

* platform/network/HTTPParsers.cpp:
(WebCore::parseStructuredFieldValue):

Canonical link: https://commits.webkit.org/240288@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280686 268f45cc-cd09-0410-ab3c-d52691b4dbfc